# phaser-whisper-langchain-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  game_controller.py
src/static/: main.js
src/templates/: index.html
